[tool.poetry]
name = "grow-chamber"
version = "0.1.0"
description = ""
authors = ["Nathan Faber <ntfaber@gmail.com>"]
readme = "README.md"
packages = [{include = "grow_chamber"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
