[tool.poetry]
name = "grow-chamber"
version = "0.1.0"
description = ""
authors = ["Nathan Faber <ntfaber@gmail.com>"]
readme = "README.md"
packages = [{include = "grow_chamber"}]

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.9.1"
flake8 = "^6.1.0"
flask = "^2.3.3"
adafruit-blinka = "^8.22.2"
peewee = "^3.16.3"

[tool.black] 
line-length = 75

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
